# MiniML

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: data_sources.txt
miniml/: __init__.py  knn.py  matrix.py
src/: bindings.cpp  knn.cpp  knn.hpp  matrix.hpp
src/utils/: metrics.cpp  metrics.hpp
tests/: knn_test.py  test_knn.py  test_matrix.py
