[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "miniml"
version = "0.1.0"
description = "High-performance ML library written in C++"
authors = [
    { name = "Olaf Domanski" }
]
requires-python = ">=3.8"
dependencies = [] 

[project.optional-dependencies]
dev = ["pytest"]
